--- a/appfront/src/components/Categories/Categories.scss
+++ b/appfront/src/components/Categories/Categories.scss
@@ -9,13 +9,14 @@
 flex: 1;
 display: flex;
 flex-direction: column;
+gap: 10px;
     }
     .col-l{
 flex: 2;
 
     }
     .row{
-        float: 1;
+        flex: 1;
         display: flex;
         gap: 10px;
         position: relative;
@@ -36,6 +37,7 @@ flex: 2;
             border: none;
             text-transform: uppercase;
             font-weight: 500;
+            border-radius: 0 4px 4px 0;
 
         }
         img{
