--- a/appfront/src/components/slider/Slider.scss
+++ b/appfront/src/components/slider/Slider.scss
@@ -1,7 +1,8 @@
 .slider {
   height: calc(100vh - 80px);
-  width: 100vw;
+  width: 100%;
 position: relative;
+overflow: hidden;
 
   .container {
   //  overflow: hidden;
@@ -12,7 +13,7 @@ position: relative;
 
     img {
       height: 100%;
-      width: 100vw;
+      width: 100%;
       object-fit: cover;
 
     }
@@ -26,15 +27,19 @@ position: relative;
     right: 0;
     bottom: 100px;
     margin: auto;
-    cursor: pointer;
-
+    gap: 8px;
+    
     .icon {
+      cursor: pointer;
         width: 50px;
         height: 50px;
         border: 1px solid #999;
         display: flex;
         align-items: center;
         justify-content: center;
+        background: #0000006b;
+        color:#bebbbb;
+       
     }
   }
 }
