--- a/appfront/src/Pages/product/Product.scss
+++ b/appfront/src/Pages/product/Product.scss
@@ -1,60 +1,57 @@
-.product{
-    
-padding: 20px 50px;
-display: flex;
-gap: 50px;
+.product {
+  padding: 20px 50px;
+  display: flex;
+  gap: 50px;
 
-.left{
+  .left {
     display: flex;
     gap: 20px;
-flex: 1;
-    .images{
-        flex: 1;
+    flex: 1;
+    .images {
+      flex: 1;
 
-        img{
-            width: 100%;
-            height: 150px;
-            object-fit: cover;
-            cursor: pointer;
-            margin-top: 10px;
-        }
+      img {
+        width: 100%;
+        height: 150px;
+        object-fit: cover;
+        cursor: pointer;
+        margin-top: 10px;
+      }
     }
 
-    .mainImg{
-flex: 5;
+    .mainImg {
+      flex: 5;
 
-img{
-    width: 100%;
-    max-height: 800px;
-    object-fit: cover;
-}
+      img {
+        width: 100%;
+        max-height: 800px;
+        object-fit: cover;
+      }
     }
-}
+  }
 
-.right{
-flex: 1;
-display: flex;
-flex-direction: column;
-gap: 30px;
-
-.price{
-    font-size: 30px;
-    font-weight: 500;
-}
-p{
-    font-size: 18px;
-    font-weight: 300;
-    text-align: justify;
-}
-
-.quantity{
+  .right {
+    flex: 1;
     display: flex;
-    align-items: center;
-    gap: 10px;
+    flex-direction: column;
+    gap: 30px;
 
-    
+    .price {
+      font-size: 30px;
+      font-weight: 500;
+    }
+    p {
+      font-size: 18px;
+      font-weight: 300;
+      text-align: justify;
+    }
 
-    button{
+    .quantity {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+
+      button {
         width: 50px;
         cursor: pointer;
         border: none;
@@ -66,73 +63,120 @@ p{
         align-items: center;
         display: flex;
         color: white;
-    }
+      }
 
-    .totalSelected{
+      .totalSelected {
         font-weight: 700;
+      }
     }
+    .color {
+      display: flex;
+      padding: 5px;
+      height: 50px;
 
-}
-.add{
-    width: 250px;
-    background: purple;
-    color: white;
-    padding: 10px;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    gap: 20px;
-    font-weight: 500;
-    border: none;
-    justify-content: center;
-}
-.links{
-    display: flex;
-    gap: 20px;
+      select {
 
-    .item{
+        font-size: 20px;
+        background: purple;
+        color: white;
+        width: 250px;
+
+        .options {
+          padding: 10px;
+        }
+      }
+    }
+    .size{
+   
+     
+        width: 250px;
+        display: flex;
+        flex-direction: column;
+       
+
+h3{
+    font-weight: 800;
+    font-size: 24px;
+    margin-bottom: 6px;
+}
+
+        .item
+        {
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+gap:10px;
+
+
+        span{
+            background: purple;
+            padding: 10px;
+            color: white;
+            cursor: pointer;
+            font-size: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    }
+    }
+    .add {
+      width: 250px;
+      background: purple;
+      color: white;
+      padding: 10px;
+      font-size: 20px;
+      display: flex;
+      align-items: center;
+      cursor: pointer;
+      gap: 20px;
+      font-weight: 500;
+      border: none;
+      justify-content: center;
+    }
+    .links {
+      display: flex;
+      gap: 20px;
+
+      .item {
         display: flex;
         align-items: center;
         gap: 10px;
         color: purple;
         font-size: 14px;
+      }
     }
-}
-.info{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    margin-top: 2rem;
-}
-
-.details{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-
-    .description{
-
+    .info {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      margin-top: 2rem;
     }
 
-    .review{
+    .details {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
 
+      .description {
+      }
+
+      .review {
         display: flex;
         align-items: center;
         justify-content: center;
-        flex-direction: column;
+        flex-direction: columyn;
 
-
-        .reviewSlider{
-            width: 60%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            display: flex;
-            flex-direction:row ;
-            gap: 20px;
-            
+        .reviewSlider {
+          width: 60%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          display: flex;
+          flex-direction: row;
+          gap: 20px;
         }
+      }
     }
-}
-}
+  }
 }
