filter using sub category and price

--- a/appfront/src/Pages/products/Products.scss
+++ b/appfront/src/Pages/products/Products.scss
@@ -14,15 +14,17 @@
       h2 {
         font-weight: 400;
         margin-bottom: 20px;
+        color: purple;
+        text-transform: capitalize;
       }
 
       .inputItem {
         margin-bottom: 10px;
-      }
 
       label {
         margin-left: 10px;
       }
+    }
     }
   }
 
