changes the categories to come from db

--- a/appfront/src/components/Categories/Categories.scss
+++ b/appfront/src/components/Categories/Categories.scss
@@ -5,6 +5,11 @@
     gap: 10px;
     margin: 10px;
 
+     h1{
+         padding-bottom: 2rem; 
+         margin-bottom: 2rem;  
+        }
+
     .col{
 flex: 1;
 display: flex;
